--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-helmet-async": "^1.3.0",
+		"react-icons": "^4.6.0",
+		"react-lazy-load-component": "^1.0.9",
+		"react-lazy-load-image-component": "^1.5.6",
 		"react-router-dom": "^6.4.3",
 		"react-scripts": "5.0.1",
 		"sass": "^1.56.0",
